namespace Balcao_API.Models
{
    public enum Perfil
    {
        ADMINISTRADOR,
        USUARIO
    }
}
