namespace Balcao_API.Models
{
    public enum StatusCompra
    {
        NEGOCIANDO,
        AGUARDANDO_PAGAMENTO,
        PAGAMENTO_EFETUADO,
        PAGAMENTO_CONFIRMADO,
        PRODUTO_RECEBIDO,
        CONCLUIDO,
        CANCELADO
    }
}
